# kbookmarks

./: .git-blame-ignore-revs  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5BookmarksConfig.cmake.in  KF6BookmarksConfig.cmake.in  README.md  metainfo.yaml
autotests/: CMakeLists.txt  kbookmarkmenutest.cpp  kbookmarktest.cpp  kbookmarktest.h
po/af/: kbookmarks5_qt.po
po/ar/: kbookmarks5_qt.po
po/ast/: kbookmarks5_qt.po
po/az/: kbookmarks5_qt.po
po/be/: kbookmarks5_qt.po
po/be@latin/: kbookmarks5_qt.po
po/bg/: kbookmarks5_qt.po
po/bn/: kbookmarks5_qt.po
po/br/: kbookmarks5_qt.po
po/bs/: kbookmarks5_qt.po
po/ca/: kbookmarks5_qt.po
po/ca@valencia/: kbookmarks5_qt.po
po/cs/: kbookmarks5_qt.po
po/csb/: kbookmarks5_qt.po
po/cy/: kbookmarks5_qt.po
po/da/: kbookmarks5_qt.po
po/de/: kbookmarks5_qt.po
po/el/: kbookmarks5_qt.po
po/en_GB/: kbookmarks5_qt.po
po/eo/: kbookmarks5_qt.po
po/es/: kbookmarks5_qt.po
po/et/: kbookmarks5_qt.po
po/eu/: kbookmarks5_qt.po
po/fa/: kbookmarks5_qt.po
po/fi/: kbookmarks5_qt.po
po/fr/: kbookmarks5_qt.po
po/fy/: kbookmarks5_qt.po
po/ga/: kbookmarks5_qt.po
po/gd/: kbookmarks5_qt.po
po/gl/: kbookmarks5_qt.po
po/gu/: kbookmarks5_qt.po
po/he/: kbookmarks5_qt.po
po/hi/: kbookmarks5_qt.po
po/hr/: kbookmarks5_qt.po
po/hsb/: kbookmarks5_qt.po
po/hu/: kbookmarks5_qt.po
po/ia/: kbookmarks5_qt.po
po/id/: kbookmarks5_qt.po
po/is/: kbookmarks5_qt.po
po/it/: kbookmarks5_qt.po
po/ja/: kbookmarks5_qt.po
po/kk/: kbookmarks5_qt.po
po/km/: kbookmarks5_qt.po
po/ko/: kbookmarks5_qt.po
po/ku/: kbookmarks5_qt.po
po/lt/: kbookmarks5_qt.po
po/lv/: kbookmarks5_qt.po
po/mai/: kbookmarks5_qt.po
po/mk/: kbookmarks5_qt.po
po/ml/: kbookmarks5_qt.po
po/mr/: kbookmarks5_qt.po
po/ms/: kbookmarks5_qt.po
po/nb/: kbookmarks5_qt.po
po/nds/: kbookmarks5_qt.po
po/ne/: kbookmarks5_qt.po
po/nl/: kbookmarks5_qt.po
po/nn/: kbookmarks5_qt.po
po/oc/: kbookmarks5_qt.po
po/pa/: kbookmarks5_qt.po
po/pl/: kbookmarks5_qt.po
po/pt/: kbookmarks5_qt.po
po/pt_BR/: kbookmarks5_qt.po
po/ro/: kbookmarks5_qt.po
po/ru/: kbookmarks5_qt.po
po/se/: kbookmarks5_qt.po
po/sk/: kbookmarks5_qt.po
po/sl/: kbookmarks5_qt.po
po/sq/: kbookmarks5_qt.po
po/sr/: kbookmarks5_qt.po
po/sr@ijekavian/: kbookmarks5_qt.po
po/sr@ijekavianlatin/: kbookmarks5_qt.po
po/sr@latin/: kbookmarks5_qt.po
po/sv/: kbookmarks5_qt.po
po/ta/: kbookmarks5_qt.po
po/tg/: kbookmarks5_qt.po
po/th/: kbookmarks5_qt.po
po/tr/: kbookmarks5_qt.po
po/ug/: kbookmarks5_qt.po
po/uk/: kbookmarks5_qt.po
po/uz/: kbookmarks5_qt.po
po/uz@cyrillic/: kbookmarks5_qt.po
po/vi/: kbookmarks5_qt.po
po/wa/: kbookmarks5_qt.po
po/x-test/: kbookmarks5_qt.po
po/xh/: kbookmarks5_qt.po
po/zh_CN/: kbookmarks5_qt.po
po/zh_TW/: kbookmarks5_qt.po
poqm/af/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/ar/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/ast/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/az/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/be/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/be@latin/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/bg/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/bn/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/br/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/bs/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/ca/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/ca@valencia/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/cs/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/csb/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/cy/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/da/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/de/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/el/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/en_GB/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/eo/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/es/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/et/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/eu/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/fa/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/fi/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/fr/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/fy/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/ga/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/gd/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/gl/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/gu/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/he/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/hi/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/hr/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/hsb/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/hu/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/ia/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/id/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/is/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/it/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/ja/: kbookmarks5_qt.po  kbookmarks6_qt.po
poqm/ka/: kbookmarks5_qt.po  (+1 more)
src/: CMakeLists.txt  Messages.sh  kbookmark.cpp  kbookmark.h  kbookmarkaction.cpp  kbookmarkaction.h  kbookmarkaction_p.h  kbookmarkactioninterface.cpp  kbookmarkactioninterface.h  kbookmarkactionmenu.cpp  kbookmarkactionmenu.h  kbookmarkcontextmenu.cpp  kbookmarkcontextmenu.h  kbookmarkdialog.cpp  kbookmarkdialog.h  kbookmarkdialog_p.h  kbookmarkdombuilder.cpp  kbookmarkdombuilder.h  kbookmarkexporter.h  kbookmarkimporter.cpp  kbookmarkimporter.h  kbookmarkimporter_ie.cpp  kbookmarkimporter_ie.h  kbookmarkimporter_ns.cpp  kbookmarkimporter_ns.h  kbookmarkimporter_opera.cpp  kbookmarkimporter_opera.h  kbookmarkimporter_opera_p.h  kbookmarkmanager.cpp  kbookmarkmanager.h  kbookmarkmanageradaptor.cpp  kbookmarkmanageradaptor_p.h  kbookmarkmenu.cpp  kbookmarkmenu.h  kbookmarkmenu_p.h  kbookmarkowner.cpp  kbookmarkowner.h  kbookmarks-index.qdoc  kbookmarks.qdoc  kbookmarks.qdocconf  (+6 more)
src/widgets/: CMakeLists.txt  kbookmarkactionmenu.h  kbookmarkcontextmenu.h  kbookmarkdialog.cpp  kbookmarkdialog.h  kbookmarkdialog_p.h  kbookmarkmenu.cpp  kbookmarkmenu.h  kbookmarkswidgets.qdoc  kbookmarkswidgets.qdocconf
tests/: CMakeLists.txt  kbookmarkdialogtest.cpp
(+116 files in other folders)
